# qloguru

./: CMakeLists.txt  readme.md
include/: CMakeLists.txt
include/qloguru/: qabstract_loguru_toolbar.hpp  qloguru.hpp
include/qspdlog/: qspdlog.hpp
sample/: CMakeLists.txt  sample.cpp
src/: CMakeLists.txt  qabstract_loguru_toolbar.cpp  qloguru.cpp  qloguru_model.cpp  qloguru_model.hpp  qloguru_proxy_model.cpp  qloguru_proxy_model.hpp  qloguru_style_dialog.cpp  qloguru_style_dialog.hpp  qloguru_toolbar.cpp  qloguru_toolbar.hpp  qspdlog.cpp  qspdlog_model.cpp  qspdlog_model.hpp  qt_logger_sink.hpp  qt_logger_sink_loguru.hpp
test/: CMakeLists.txt  test_qloguru.cpp
